port r52753 from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-11-branch@52755 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/CHANGES
+++ b/src/gnuwin32/CHANGES
@@ -31,6 +31,10 @@ BUG FIXES
       	
     o	readClipboard() could cause a segfault with certain clipboard data.
 
+    o	A fix intended for Mac OS X was incorrectly applied to Windows,
+	so iconv(x, from, "") in a C locale was interpreted as
+	requesting translation to UTF-8.
+
 
 
     		CHANGES IN R VERSION 2.11.1
