--- a/src/gnuwin32/CHANGES
+++ b/src/gnuwin32/CHANGES
@@ -35,6 +35,10 @@ BUG FIXES
 	so iconv(x, from, "") in a C locale was interpreted as
 	requesting translation to UTF-8.
 
+    o	system(intern=TRUE) often returned 0 rather than an error
+	status if the command could not be found, if run from Rterm or
+	from Rgui with show.output.on.console = FALSE.
+
 
 
     		CHANGES IN R VERSION 2.11.1
