--- a/doc/manual/R-ints.texi
+++ b/doc/manual/R-ints.texi
@@ -3764,7 +3764,7 @@ Another immediate consequence is that there would need to be a C type to
 hold vector lengths and element numbers, say @code{Rlongint}.  It would
 be cleanest if this were a type defined by @R{}, and it may need to be.
 C99 guarantees @emph{via} @file{stdint.h} a number of types which are
-64-bit or at least 64-bit and which would be suitable, but regretably
+64-bit or at least 64-bit and which would be suitable, but regrettably
 people try to use @R{} internals in C++, whereas C99 is not a subset
 of C++ and C++ compilers are not required to support these types.  It
 would need to be tested if @file{stdint.h} was widely enough usable.
@@ -3795,10 +3795,10 @@ indices, and return @code{double} only when necessary.
 @end itemize
 
 @noindent
-The third has the advantages of mininal distruption to existing code and
+The third has the advantages of minimal disruption to existing code and
 not increasing memory requirements, but the disadvantage that the code
 branches for long vectors would be tested rarely.  In the first and
-third scenarios both @R{}'s own code and user code woud have to be
+third scenarios both @R{}'s own code and user code would have to be
 adapted for lengths that were not of type @code{integer}.
 
 @item
