--- a/doc/manual/R-ints.texi
+++ b/doc/manual/R-ints.texi
@@ -3402,56 +3402,45 @@ file @file{~/.R/check.Renviron}.
 
 @vtable @code
 @item _R_CHECK_ALL_NON_ISO_C_
-@vindex _R_CHECK_ALL_NON_ISO_C_
 If true, do not ignore compiler (typically GCC) warnings about non ISO C
 code in @emph{system} headers.  Note that this may also show additional
 ISO C++ warnings.
 Default: false.
 @item _R_CHECK_FORCE_SUGGESTS_
-@vindex_R_CHECK_FORCE_SUGGESTS_
 If true, give an error if suggested packages are not available.
 Default: true.
 @item _R_CHECK_LATEX_VIGNETTES_
-@vindex_R_CHECK_LATEX_VIGNETTES_
 If true (and @code{R_check_weave_vignettes} is also true),
 @command{latex} package vignettes in the process of checking them: this
 will show up @code{Sweave} source errors, including missing source
 files.  Default: true.
 @item _R_CHECK_RD_CONTENTS_
-@vindex_R_CHECK_RD_CONTENTS_
 If true, check @file{Rd} files for auto-generated content which needs editing,
 and missing argument documentation.
 Default: true.
 @item _R_CHECK_RD_STYLE_
-@vindex_R_CHECK_RD_STYLE_
 If true, check whether @file{Rd} usage entries for S3 methods use the full
 function name rather than the appropriate @code{\method} markup.
 Default: true.
 @item _R_CHECK_RD_XREFS_
-@vindex_R_CHECK_RD_XREFS_
 If true, check the cross-references in @file{.Rd} files.
 Default: true.
 @item _R_CHECK_SUBDIRS_NOCASE_
-@vindex_R_CHECK_SUBDIRS_NOCASE_
 If true, check the case of directories such as @file{R} and @file{man}.
 Default: false.
 @item _R_CHECK_SUBDIRS_STRICT_
-@vindex_R_CHECK_SUBDIRS_STRICT_
 Initial setting for @option{--check-subdirs}.
 Default: @samp{default} (which checks only tarballs, and checks in the
 @file{src} only if there is no @file{configure} file).
 @item _R_CHECK_USE_INSTALL_LOG_
-@vindex_R_CHECK_USE_INSTALL_LOG_
 If true, record the output from installing a package as part of its
 check to a log file (@file{00install.out} by default), even when running
 interactively.
 Default: true.
 @item _R_CHECK_WEAVE_VIGNETTES_
-@vindex_R_CHECK_WEAVE_VIGNETTES_
 If true, weave package vignettes in the process of checking them.
 Default: true.
 @item _R_CHECK_USE_CODETOOLS_
-@vindex_R_CHECK_USE_CODETOOLS_
 If true, make use of the @pkg{codetools} package, which provides a
 detailed analysis of visibility of objects (but may give false
 positives).
@@ -3511,6 +3500,12 @@ Default: true.
 Control whether gfortran 4.0 or later @option{-Wall} warnings are used in
 the analysis of installation output.
 Default: false, even though the warnings are justifiable.
+@item _R_CHECK_ASCII_CODE_
+If true, check @R{} code for non-ascii characters.
+Default: true.
+@item _R_CHECK_ASCII_DATA_
+If true, check data for non-ascii characters.
+Default: true.
 @end vtable
 
 @node R coding standards, Testing R code, Tools, Top
