Port r52886 from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-11-branch@52887 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/CHANGES
+++ b/src/gnuwin32/CHANGES
@@ -38,6 +38,9 @@ BUG FIXES
     o	system(intern=TRUE) often returned 0 rather than an error
 	status if the command could not be found, if run from Rterm or
 	from Rgui with show.output.on.console = FALSE.
+	
+    o	memory.limit() did not allow sizes greater than 4095 even on
+    	64 bit builds. (PR#14372)
 
 
 
