--- a/po/RGui-de.po
+++ b/po/RGui-de.po
@@ -1,14 +1,14 @@
 # translation of po/RGui.pot to German
 # This file is distributed under the same license as the R package.
-# Copyright (C) 2005-2009.
-# Detlef Steuer <steuer@hsuhh.de>, 2005-2009.
+# Copyright (C) 2005-2010.
+# Detlef Steuer <steuer@hsuhh.de>, 2005-2010.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: R-2.10.0\n"
+"Project-Id-Version: R-2.12.0\n"
 "Report-Msgid-Bugs-To: bugs@R-project.org\n"
 "POT-Creation-Date: 2010-08-30 08:39+0100\n"
-"PO-Revision-Date: 2009-10-07 14:23+0200\n"
+"PO-Revision-Date: 2010-09-21 14:18+0200\n"
 "Last-Translator: Detlef Steuer <steuer@hsu-hh.de>\n"
 "Language-Team: R-core <R-core@r-project.org>\n"
 "MIME-Version: 1.0\n"
@@ -646,9 +646,9 @@ msgid "Select 'Rconsole' file"
 msgstr "Wähle 'Rconsole' Datei"
 
 #: preferences.c:687
-#, fuzzy, c-format
+#, c-format
 msgid "Ignored '%s' at line %d of file %s"
-msgstr "Fehler in Zeile %d von Datei %s"
+msgstr "Habe '%s' in Zeile %d von Datei %s ignoriert"
 
 #: preferences.c:788
 msgid "Rgui Configuration Editor"
